==> bekencorp/bk7231u_alios_sdk/platform/mcu/stm32f4xx_cube/hal/hal_uart_stm32f4.c <==
#include <k_api.h>
#include <stdio.h>
#include <stdlib.h>
#include "aos/hal/uart.h"
#include "stm32f4xx.h"
#include "stm32f4xx_hal.h"
#include "hal_uart_stm32f4.h"
#include "stm32f4xx_hal_dma.h"

int32_t hal_uart_init(uart_dev_t *uart)
{
    int32_t ret = -1;
    UART_HandleTypeDef *pstuarthandle = NULL;
    UART_MAPPING* uartIns = NULL;
    
    if (uart == NULL) {
        return -1;
    }
    //no found this port in function-physical uartIns, no need initialization
    uartIns = GetUARTMapping(uart->port);
    if( NULL== uartIns ){ 
        return -1;
    }
    memset(&stm32_uart[uart->port],0,sizeof(stm32_uart_t));

    pstuarthandle = &stm32_uart[uart->port].hal_uart_handle;
    pstuarthandle->Init.BaudRate               = uart->config.baud_rate;
    ret = uart_dataWidth_transform(uart->config.data_width, &pstuarthandle->Init.WordLength);
    ret |= uart_parity_transform(uart->config.parity, &pstuarthandle->Init.Parity);
    ret |= uart_stop_bits_transform(uart->config.stop_bits, &pstuarthandle->Init.StopBits);
    ret |= uart_flow_control_transform(uart->config.flow_control, &pstuarthandle->Init.HwFlowCtl);
    ret |= uart_mode_transform(uart->config.mode, &pstuarthandle->Init.Mode);
    if (ret) {
        printf("invalid uart data \r\n");
        memset(pstuarthandle, 0, sizeof(*pstuarthandle));
        return -1;
    }    

    if(NULL == stm32_uart[uart->port].UartRxBuf){
        stm32_uart[uart->port].UartRxBuf = aos_malloc(uartIns->attr.max_buf_bytes);
    }
    
    if (NULL == stm32_uart[uart->port].UartRxBuf) {
        printf("Fail to malloc memory size %d at %s %d \r\d", uartIns->attr.max_buf_bytes, __FILE__, __LINE__);
        return -1;
    }
    memset(stm32_uart[uart->port].UartRxBuf, 0, uartIns->attr.max_buf_bytes);

    //uart->priv = pstuarthandle; //priv must not be used in uart driver

    pstuarthandle->Instance = (USART_TypeDef*)uartIns->uartPhyP;
    pstuarthandle->Init.OverSampling = uartIns->attr.overSampling;
    
    /* init uart */
    ret = HAL_UART_Init(pstuarthandle);
    if (ret != HAL_OK) {
        printf("uart %d init fail \r\n", uart->port);
        aos_free(stm32_uart[uart->port].UartRxBuf);
        stm32_uart[uart->port].UartRxBuf = NULL;
        return ret;
    }

    aos_mutex_new(&stm32_uart[uart->port].uart_tx_mutex);
    aos_mutex_new(&stm32_uart[uart->port].uart_rx_mutex);
    aos_sem_new(&stm32_uart[uart->port].uart_rx_sem, 0);
    aos_sem_new(&stm32_uart[uart->port].uart_tx_sem, 0);

    /* if UART Rx DMA Handle is NULL, then start data receive in interrupt mode
     * otherwise in DMA mode
     */
    if(pstuarthandle->hdmarx ==NULL)
        ret = uart_receive_start_it(uart->port,uartIns->attr.max_buf_bytes);
    else
        ret = uart_receive_start_dma(uart->port,uartIns->attr.max_buf_bytes);

    if (ret) {
        aos_free(stm32_uart[uart->port].UartRxBuf);
        stm32_uart[uart->port].UartRxBuf = NULL;
        aos_mutex_free(&stm32_uart[uart->port].uart_tx_mutex);
        aos_mutex_free(&stm32_uart[uart->port].uart_rx_mutex);
        aos_sem_free(&stm32_uart[uart->port].uart_rx_sem);
        aos_sem_free(&stm32_uart[uart->port].uart_tx_sem);
    }
    return ret;
}

int32_t hal_uart_send(uart_dev_t *uart, const void *data, uint32_t size, uint32_t timeout)
{
    int32_t ret = -1;
    UART_HandleTypeDef *handle = NULL;
    UART_MAPPING* uartIns = NULL;
    
    if ((uart == NULL) || (data == NULL)) {
        return -1;
    }    

    uartIns = GetUARTMapping(uart->port);
    if( NULL== uartIns ){ 
        return -1;
    }
    
    handle = uart_get_handle(uart->port);
    if (handle == NULL) {
        return -1;
    }
    if(stm32_uart[uart->port].inited!=1)
    {
        return -1;
    }

    if (g_intrpt_nested_level[cpu_cur_get()] > 0) {
        ret = HAL_UART_Transmit(handle, (uint8_t *)data, size, timeout);
        return ret;
    }
    /* if  UART Tx DMA Handle is NULL, then start data send in interrupt mode
     * otherwise in DMA mode
     */
    if(handle->hdmatx ==NULL)
        ret = uart_send_it(uart->port,data, size, timeout);
    else
        ret = uart_send_dma(uart->port,data, size, timeout);

    return ret;
}

int32_t hal_uart_recv_II(uart_dev_t *uart, void *data, uint32_t expect_size,
                      uint32_t *recv_size, uint32_t timeout)
{
    int32_t ret = -1;
    UART_MAPPING* uartIns = NULL;
    
    if ((uart == NULL) || (data == NULL)) {
        return -1;
    }

    uartIns = GetUARTMapping(uart->port);
    if( NULL== uartIns ){ 
        return -1;
    }
    
    if (aos_mutex_lock(&stm32_uart[uart->port].uart_rx_mutex, timeout)) {
        printf("uart port % recv fail to get mutex \r\n", uart->port);
        return -1;
    }
    
    if(stm32_uart[uart->port].hal_uart_handle.hdmarx == NULL)
        ret = uart_receive_it(uart, data, expect_size,recv_size,timeout);
    else
        ret = uart_receive_dma(uart, data, expect_size,recv_size,timeout);

    aos_mutex_unlock(&stm32_uart[uart->port].uart_rx_mutex);
    return ret;
}

int32_t hal_uart_finalize(uart_dev_t *uart)
{
    int32_t ret = -1;
    UART_MAPPING* uartIns = NULL;
    
    if (uart == NULL) {
        return -1;
    }

    uartIns = GetUARTMapping(uart->port);
    if( NULL== uartIns ){ 
        return -1;
    }

    if (stm32_uart[uart->port].inited == 0) {
        return -1;
    }
    
    ret = HAL_UART_DeInit(&stm32_uart[uart->port].hal_uart_handle);
    if(NULL != stm32_uart[uart->port].UartRxBuf){
        free(stm32_uart[uart->port].UartRxBuf);
        stm32_uart[uart->port].UartRxBuf = NULL;
    }

    if (aos_sem_is_valid(&stm32_uart[uart->port].uart_tx_sem)) {
        aos_sem_free(&stm32_uart[uart->port].uart_tx_sem);
    }
    
    if (aos_mutex_is_valid(&stm32_uart[uart->port].uart_tx_mutex)) {
        aos_mutex_free(&stm32_uart[uart->port].uart_tx_mutex);
    }

    if (aos_sem_is_valid(&stm32_uart[uart->port].uart_rx_sem)) {
        aos_sem_free(&stm32_uart[uart->port].uart_rx_sem);
    }

    if (aos_mutex_is_valid(&stm32_uart[uart->port].uart_rx_mutex)) {
        aos_mutex_free(&stm32_uart[uart->port].uart_rx_mutex);
    }

    stm32_uart[uart->port].inited = 0;
    return ret;
}

int32_t uart_dataWidth_transform(hal_uart_data_width_t data_width_hal,
        uint32_t *data_width_stm32l4)
{
    uint32_t data_width = 0;
    int32_t ret = 0;

    if(data_width_hal == DATA_WIDTH_8BIT)
    {
        data_width = UART_WORDLENGTH_8B;
    }
    else if(data_width_hal == DATA_WIDTH_9BIT)
    {
        data_width = UART_WORDLENGTH_9B;
    }
    else
    {
        ret = -1;
    }

    if(ret == 0)
    {
        *data_width_stm32l4 = data_width;
    }

    return ret;
}

int32_t uart_parity_transform(hal_uart_parity_t parity_hal,
        uint32_t *parity_stm32l4)
{
    uint32_t parity = 0;
    int32_t ret = 0;

    if(parity_hal == NO_PARITY)
    {
        parity = UART_PARITY_NONE;
    }
    else if(parity_hal == ODD_PARITY)
    {
        parity = UART_PARITY_EVEN;
    }
    else if(parity_hal == EVEN_PARITY)
    {
        parity = UART_PARITY_ODD;
    }
    else
    {
        ret = -1;
    }

    if(ret == 0)
    {
        *parity_stm32l4 = parity;
    }

    return ret;
}

int32_t uart_stop_bits_transform(hal_uart_stop_bits_t stop_bits_hal,
        uint32_t *stop_bits_stm32l4)
{
    uint32_t stop_bits = 0;
    int32_t ret = 0;

    if(stop_bits_hal == STOP_BITS_1)
    {
        stop_bits = UART_STOPBITS_1;
    }
    else if(stop_bits_hal == STOP_BITS_2)
    {
        stop_bits = UART_STOPBITS_2;
    }
    else
    {
        ret = -1;
    }

    if(ret == 0)
    {
        *stop_bits_stm32l4 = stop_bits;
    }

    return ret;
}
